assign service to staff
